# subscriptio

./: .gitignore  README.md  dev-logs.sh  dev-start.sh  dev-stop.sh
.github/workflows/: pr-check.yml
admin-dashboard/: package-lock.json  package.json
admin-dashboard/src/app/: page.tsx
admin-dashboard/src/lib/: api.ts  utils.ts
admin-dashboard/src/types/: index.ts
analytics-service/: .gitignore  pyproject.toml
analytics-service/app/: config.py  database.py  main.py
analytics-service/app/api/: analytics.py  metrics.py
analytics-service/app/models/: schemas.py
analytics-service/app/services/: churn_calculator.py  cohort_analysis.py  mrr_calculator.py  revenue_forecast.py
analytics-service/tests/: test_churn_calculator.py  test_forecast.py  test_mrr_calculator.py
backend/: pom.xml
customer-portal/: .gitignore  nuxt.config.ts  package-lock.json  package.json  tailwind.config.ts
customer-portal/app/: app.vue
docs/adr/: adr-0001-monorepo-structure.md  adr-0002-multi-tenancy-strategy.md  adr-0003-hexagonal-architecture.md  adr-0004-subscription-state-machine.md  adr-0005-billing-engine-design.md  adr-0006-stripe-integration-pattern.md  adr-0007-python-analytics-service.md  adr-0008-infrastructure-deployment.md
docs/diagrams/: architecture.md  billing-flow.md  data-model.md  subscription-state-machine.md
infra/: docker-compose.yml
infra/docker/: admin-dashboard.Dockerfile  analytics.Dockerfile  backend.Dockerfile  customer-portal.Dockerfile  nginx-spa.conf
infra/k8s/: ingress.yaml  namespace.yaml  network-policy.yaml  rbac.yaml  secrets.yaml
(+138 files in other folders)
